--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github repo</title>
+    <style>
+        .habu{
+            color: brown;
+        }
+    </style>
 </head>
 <body>
-    <h1>hablue mamar am bagan</h1>
-    <p>bag mama</p>
+    <h1 class="habu">hablue mamar am bagan</h1>
+    
 </body>
 </html>
